gccida/c3/record_value_for_reg
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_value_for_reg/src/combine.c:11622:4: error: expected ';' after expression
rtx last_value; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_value_for_reg/src/combine.c:11622:5: error: use of undeclared identifier 'last_value'
rtx last_value; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_value_for_reg/src/combine.c:11623:4: error: expected ';' after expression
rtx v12; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_value_for_reg/src/combine.c:11623:5: error: use of undeclared identifier 'v12'
rtx v12; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_value_for_reg/src/combine.c:11628:6: error: use of undeclared identifier 'v17'
rtx *v17; // rdi 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_value_for_reg/src/combine.c:11629:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v18; // rsi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_value_for_reg/src/combine.c:11632:6: error: use of undeclared identifier 'v21'; did you mean 'v20'?
rtx *v21; // r8 
     ^~~
     v20
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_value_for_reg/src/combine.c:11631:7: note: 'v20' declared here
char *v20; // rcx 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_value_for_reg/src/combine.c:11632:5: error: invalid operands to binary expression ('rtx' (aka 'struct rtx_def *') and 'char *')
rtx *v21; // r8 
~~~ ^~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_value_for_reg/src/combine.c:11634:6: error: use of undeclared identifier 'v23'
rtx *v23; // r9 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_value_for_reg/src/combine.c:11715:4: error: expected ';' after expression
rtx loc; // [rsp+18h] [rbp-50h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_value_for_reg/src/combine.c:11715:5: error: use of undeclared identifier 'loc'
rtx loc; // [rsp+18h] [rbp-50h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_value_for_reg/src/combine.c:11716:4: error: expected ';' after expression
rtx orig; // [rsp+20h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_value_for_reg/src/combine.c:11716:5: error: use of undeclared identifier 'orig'
rtx orig; // [rsp+20h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_value_for_reg/src/combine.c:11718:4: error: expected ';' after expression
rtx v107; // [rsp+30h] [rbp-38h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_value_for_reg/src/combine.c:11718:5: error: use of undeclared identifier 'v107'
rtx v107; // [rsp+30h] [rbp-38h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_value_for_reg/src/combine.c:11722:1: error: use of undeclared identifier 'loc'
loc = value; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_value_for_reg/src/combine.c:11739:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v7 = ( ( unsigned int)( mode_class_0[v8] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_value_for_reg/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_value_for_reg/src/combine.c:11780:1: error: use of undeclared identifier 'orig'
orig = v3; 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_value_for_reg/src/combine.c:11783:1: error: use of undeclared identifier 'last_value'
last_value = get_last_value( reg); 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/record_value_for_reg/src/obj/combine.o] Error 1
